assets/css/style.css
/* ... */
.er-nav-boembep {
    position: absolute;
    left: 50vw;
    transform: translateX(-50%);
    letter-spacing: 8px;
    font-weight: 300;
    color: rgba(255, 255, 255);
}

.er-nav-boembep h2 {
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.9);
}

/* ----------------------------------------Section-colors */

#frontpage {
    scroll-snap-align: none;
}

#info {
    background-color: rgba(207, 190, 160, 0.92);
}

#music {
    background-color: rgba(207, 190, 160, 0.92);
}

#download {
    background-color: rgba(207, 190, 160, 0.92);
}

#art {
    background-color: rgba(207, 190, 160, 0.92);
}

#video {
    background-color: rgba(207, 190, 160, 0.92);
}

/* ----------------------------------------Section template with scroll snapping to top */

.er-content {
    min-height: 100vh;
    scroll-snap-align: start;
    width: 100%;
    margin: 0;
}

/* ----------------------------------------Section content */

.er-content-wrapper {
    padding-top: 3em;
    min-height: 60vh;
    margin-top: auto;
    margin-bottom: auto;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

/* ----------------------------------------Section Content building blocks */

.er-content-block {
    margin: 2em 0 2em 0;
    width: 100%;
}

.er-content-circle {
    width: 66%;
    height: auto;
    margin: auto;
    overflow: hidden;
    border-radius: 50%;
}

.er-content-square {
    padding: 15px;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(60, 60, 60, 0.1);
    box-shadow: 0px 0px 25px rgba(60, 60, 60);
}

/* ----------------------------------------Section header and footer */

.er-content-header {
    margin-top: 5em;
    margin-bottom: 2em;
    text-align: right;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    transform: rotate(0deg);
    box-shadow: 1px 1px 1px #ffffffa1;
    background-color: rgba(255, 255, 255, 0.61);
}

.er-header-text {
    margin-right: 15px;
    font-family: 'Allerta Stencil', sans-serif;
    font-weight: 100;
    font-size: 1.5em;
    letter-spacing: 0px;
    text-shadow: 1px 1px 1px #ffffffa1;
    color: rgba(207, 190, 160);
}

.er-content-footer {
    text-align: left;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    margin-top: 0em;
    margin-bottom: 2em;
    box-shadow: 5px 5px 5px #a59172;
    transform: rotate(-1deg);
    background-color: rgba(0, 0, 0, 0.7);
}

.er-footer-text {
    margin-right: 15px;
    margin-left: 15px;
    font-family: 'Allerta Stencil', sans-serif;
    font-size: 1.5em;
    font-weight: 100;
    letter-spacing: 0px;
    text-shadow: 1px 1px 2px #000000a1;
    color: rgba(207, 190, 160);
}

/* ----------------------------------------Overlay section navigation */

.er-centerscreen {
    position: absolute;
    top: 5.5em;
    right: 0vw;
    color: rgba(60, 60, 60, 0.4);
}

.er-centerscreen a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(60, 60, 60, 0.3);
}

.er-centerscreen a:hover {
    color: rgba(60, 60, 60);
}

.er-centerscreen a:active {
    color: rgba(60, 60, 60, 0.1);
}

.er-arrow {
    width: 2vw;
    position: absolute;
    right: 2vw;
    text-align: center;
    color: rgba(178, 43, 43, 0.7);
}

.er-arrow a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(178, 43, 43, 0.6);
}

.er-arrow a:hover {
    font-size: 110%;
    color: rgba(178, 43, 43, 0.9);
}

.er-arrow a:active {
    color: rgba(60, 60, 60, 0.1);
}

.er-arrow-up {
    top: 84vh;
}

.er-arrow-down {
    top: 92vh;
}

.er-arrow-frontpage {
    top: 84vh;
}

/* ----------------------------------------Social icons left side */

.er-social-side {}

.er-social {
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    color: rgba(60, 60, 60, 0.7);
}

.er-social a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(60, 60, 60, 0.7);
}

.er-social a:active {
    color: rgba(60, 60, 60, 0.1)!important;
}

#er-social-first {
    top: 20vh;
}

#er-social-first a:hover {
    color: rgba(61, 91, 153);
}

#er-social-second {
    top: 35vh;
}

#er-social-second a:hover {
    color: rgba(224, 80, 95);
}

#er-social-third {
    top: 50vh
}

#er-social-third a:hover {
    color: rgb(225, 85, 0);
}

#er-social-fourth {
    top: 65vh;
}

#er-social-fourth a:hover {
    color: rgba(255, 0, 0);
}

#er-social-fifth {
    top: 81vh;
}

#er-social-fifth img {
    margin: 0px;
    left: 3vw;
}

/* ----------------------------------------Social icons horizontal (mobile) */

.er-social-mobile {
    margin-bottom: 2em;
}

.er-social-dutchgems img {
    margin-right: auto;
}

.er-social-facebook a:hover {
    color: rgba(61, 91, 153);
}

.er-social-insta a:hover {
    color: rgba(224, 80, 95);
}

.er-social-soundcloud a:hover {
    color: rgb(225, 85, 0);
}

.er-social-youtube a:hover {
    color: rgba(255, 0, 0);
}

/* ----------------------------------------Frontpage section specifics */

.er-sticker {
    position: absolute;
    top: 10vh;
    right: 8vw;
    width: 125px;
    height: 125px;
    border-radius: 50%;
    box-shadow: -4px 2px 7px rgba(60, 60, 60);
}

.er-button {
    font-size: 3em;
    color: rgba(60, 60, 60);
    margin-bottom: 12px;
    padding: 12px 30px 12px 30px;
    border-color: rgba(60, 60, 60);
    border: 1px;
    border-radius: 10px;
    box-shadow: -4px 2px 7px rgba(60, 60, 60);
    background-color: rgba(255, 255, 255, 0.83);
    transition-property: background-color;
    transition-duration: 120ms;
    transition-timing-function: ease-in-out;
}

.er-button:hover {
    color: rgba(255, 255, 255);
    background-color: rgba(60, 60, 60, 0.8);
}

.er-button:active {
    outline: 0!important;
    color: rgba(255, 255, 255);
    background-color: rgba(60, 60, 60);
    box-shadow: 0px 0px 25px rgba(60, 60, 60);
}
/* ... */

